--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
         </form>
       </div>
     </div>
+    <button class="modal__button" type="submit">Save</button>
+  </form>
+</div>
+</div>
+
+<template id="card-template">
+<li class="card">
+  <img class="card__img" src="" alt="" />
+  <div class="card__description">
+    <h2 class="card__img-title"></h2>
+    <button class="card__like-button" aria-label="like button"></button>
+  </div>
+</li>
+</template>
     <script src="./scripts/index.js" defer></script>
   </body>
 </html>
