--- a/index.html
+++ b/index.html
@@ -2,40 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Carlos Chavez" />
-    <meta name="keywords" content="html, css, java" />
-    <link rel="stylesheet" href="pages/index.css" />
-    <title>Around the U.S.</title>
+    <title>Around the U.S</title>
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
         <img
+          src="./images/logo.svg"
+          alt="Around the U.S. logo"
           class="header__logo"
-          src="./images/Around-the-US-icon-top.svg"
-          alt="around the us logo"
         />
       </header>
+
       <main class="content">
         <section class="profile page__section">
           <img
+            src="./images/jacques-cousteau(1).jpg"
+            alt="Avatar"
             class="profile__image"
-            src="./images/jacques-cousteau.jpg"
-            alt="avatar"
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button
+              class="profile__edit-button"
+              id="profile-edit-button"
+              aria-label="profile edit"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button" type="button"></button>
+          <button class="profile__add-button" aria-label="profile add"></button>
+        </section>
+
+        <section class="cards">
+          <ul class="cards__list"></ul>
         </section>
       </main>
-      <footer class="footer">
-        <p class="footer__copyright">&copy;2023 Around The U.S.</p>
+      <footer class="footer page__section">
+        <p class="footer__name">&copy; 2023 Carlos Chavez</p>
       </footer>
     </div>
+
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button
