--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__name">&copy; 2023 Carlos Chavez</p>
+        <p class="footer__name">&copy; 2023 Carlos Chavez
+        </p>
       </footer>
     </div>
 
