--- a/index.html
+++ b/index.html
@@ -46,46 +46,90 @@
       </footer>
     </div>
 
-    <div class="modal" id="profile-edit-modal">
+
+    <div class="modal" id="edit-modal">
       <div class="modal__container">
         <button
           class="modal__close"
           type="button"
-          id="modal-close-button"
         ></button>
-        <h3 class="modal__heading">Edit profile</h3>
+        <h3 class="modal__title">Edit profile</h3>
         <form class="modal__form">
           <input
-            class="modal__form-input"
+            class="modal__input modal__input_type_name"
             type="text"
             name="title"
-            id="profile-title-input"
             placeholder="Name"
             required
           />
           <input
-            class="modal__form-input"
+            class="modal__input modal__input_type_description"
             type="text"
             name="description"
             id="profile-description-input"
-            placeholder="About"
+            placeholder="Description"
             required
           />
-          <button class="modal__button" type="submit">Save</button>
+          <button class="button modal__button" type="submit">Save</button>
         </form>
       </div>
     </div>
 
+
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          type="button"
+        ></button>
+        <h3 class="modal__title">New Place</h3>
+        <form class="modal__form" id="add-card-form">
+          <input
+            class="modal__input modal__input_type_title"
+            type="text"
+            name="title"
+            placeholder="Title"
+            required
+          />
+          <input
+            class="modal__input modal__input_type_url"
+            type="text"
+            name="url"
+            placeholder="Image URL"
+          />
+          <button class="button modal__button" type="submit">Save</button>
+        </form>
+      </div>
+    </div>
+
+
+
+    <div class="modal" id="previewImageModal">
+      <div class="modal__image-container">
+        <img src="#" class="modal__image" alt="pop up preview image" id="modalImage"/>
+        <p class="modal__text" id="modalText"></p>
+        <button
+          class="modal__close"
+          id="previewCloseBtn"
+          type="button"></button>
+      </div>
+    </div>
+
+
+
     <template id="card-template">
       <li class="card">
-        <img class="card__img" src="" alt="" />
+        <img class="card__image" src="" alt="" />
         <div class="card__description">
-          <h2 class="card__img-title"></h2>
+          <h2 class="card__title"></h2>
           <button class="card__like-button" aria-label="like button"></button>
+          <button
+            class="card__delete-button"
+            aria-label="delete button"
+          ></button>
         </div>
       </li>
     </template>
-
     <script src="./scripts/index.js" defer></script>
   </body>
 </html>
