--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button" aria-label="profile add"></button>
+          <button
+            class="profile__add-button"
+            type="button"
+            aria-label="profile add"
+          ></button>
         </section>
 
-        <section class="cards">
+        <section class="cards page__section">
           <ul class="cards__list"></ul>
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__name">&copy; 2023 Carlos Chavez
-        </p>
+        <p class="footer__name">&copy; 2023 Carlos Chavez</p>
       </footer>
     </div>
 
-
+    <!-- Edit Modal-->
     <div class="modal" id="edit-modal">
       <div class="modal__container">
         <button
