--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/jacques-cousteau.jpg"
+            src="./images/jacques-cousteau.jpeg"
             alt="Avatar"
             class="profile__image"
           />
