--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           />
           <input
             class="modal__input modal__input_type_url"
-            type="text"
+            type="url"
             name="url"
             placeholder="Image URL"
           />
