--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </li>
     </template>
+    <script src="./scripts/validation.js" defer></script>
     <script src="./scripts/index.js" defer></script>
-    <script src="./scripts/validation.js"></script>
   </body>
 </html>
