--- a/index.html
+++ b/index.html
@@ -2,26 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,
+    user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Around the U.S</title>
-    <link rel="stylesheet" href="./pages/index.css" />
+    <title>Around the U.S.</title>
+    <link href="./pages/index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <body class="page">
     <div class="page__content">
-      <header class="header page__section">
+      <header class="header">
         <img
           src="./images/logo.svg"
-          alt="Around the U.S. logo"
-          class="header__logo"
+          alt="Around the U.S logo"
+          class="header__image"
         />
       </header>
-
       <main class="content">
-        <section class="profile page__section">
+        <section class="profile">
           <img
             src="./images/jacques-cousteau.jpg"
-            alt="Avatar"
+            alt="avatar"
             class="profile__image"
           />
           <div class="profile__info">
@@ -29,107 +33,111 @@
             <button
               class="profile__edit-button"
               id="profile-edit-button"
-              aria-label="profile edit"
+              type="button"
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button
-            class="profile__add-button"
-            type="button"
-            aria-label="profile add"
-          ></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
-
-        <section class="cards page__section">
-          <ul class="cards__list"></ul>
+        <section class="card page__section">
+          <ul class="card__list"></ul>
         </section>
       </main>
-      <footer class="footer page__section">
-        <p class="footer__name">&copy; 2023 Carlos Chavez</p>
+      <footer class="footer">
+        <p class="footer__content">© 2022 Around The U.S.</p>
       </footer>
     </div>
-
-    <!-- Edit Modal-->
+    <!-- Edit Modal -->
     <div class="modal" id="edit-modal">
       <div class="modal__container">
         <button
           class="modal__close"
+          id="modal-close-button"
           type="button"
         ></button>
-        <h3 class="modal__title">Edit profile</h3>
+        <h2 class="modal__heading">Edit profile</h2>
         <form class="modal__form">
-          <input
-            class="modal__input modal__input_type_name"
-            type="text"
-            name="title"
-            placeholder="Name"
-            required
-          />
-          <input
-            class="modal__input modal__input_type_description"
-            type="text"
-            name="description"
-            id="profile-description-input"
-            placeholder="Description"
-            required
-          />
-          <button class="button modal__button" type="submit">Save</button>
+          <label class="modal__label">
+            <input
+              type="text"
+              name="title"
+              class="modal__input modal__input_type_name"
+              id="profile-title"
+              placeholder="Name"
+              minlength="2"
+              maxlength="40"
+              required
+            />
+            <span class="modal__error" id="profile-title-error"></span>
+          </label>
+          <label class="modal__label">
+            <input
+              type="text"
+              name="description"
+              class="modal__input modal__input_type_description"
+              id="profile-description"
+              placeholder="Description"
+              minlength="2"
+              maxlength="200"
+              required
+            />
+            <span class="modal__error" id="profile-description-error"></span>
+          </label>
+          <button type="submit" class="modal__button">Save</button>
         </form>
       </div>
     </div>
 
-
+    <!-- Add Card Modal-->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button
-          class="modal__close"
-          type="button"
-        ></button>
-        <h3 class="modal__title">New Place</h3>
+        <button class="modal__close" id="button" type="button"></button>
+        <h2 class="modal__heading">New Place</h2>
         <form class="modal__form" id="add-card-form">
-          <input
-            class="modal__input modal__input_type_title"
-            type="text"
-            name="title"
-            placeholder="Title"
-            required
-          />
-          <input
-            class="modal__input modal__input_type_url"
-            type="url"
-            name="url"
-            placeholder="Image URL"
-          />
-          <button class="button modal__button" type="submit">Save</button>
+          <label class="modal__label">
+            <input
+              type="text"
+              name="title"
+              class="modal__input modal__input_type_title"
+              placeholder="Title"
+              id="modal-title-add-card"
+              minlength="1"
+              maxlength="30"
+              required
+            />
+            <span class="modal__error" id="modal-title-add-card-error"></span>
+          </label>
+          <label class="modal__label">
+            <input
+              type="url"
+              name="url"
+              class="modal__input modal__input_type_url"
+              placeholder="Image URL"
+              id="modal-url-add-card"
+              required
+            />
+            <span class="modal__error" id="modal-url-add-card-error"> </span>
+          </label>
+          <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
     </div>
-
-
-
-    <div class="modal" id="previewImageModal">
+    <!-- Opening Picture Modal -->
+    <div class="modal" id="card-image">
       <div class="modal__image-container">
-        <img src="#" class="modal__image" alt="pop up preview image" id="modalImage"/>
-        <p class="modal__text" id="modalText"></p>
-        <button
-          class="modal__close"
-          id="previewCloseBtn"
-          type="button"></button>
+        <h2 class="modal__title"></h2>
+        <button class="modal__image-close-button" type="button"></button>
+        <img class="modal__card-image-preview" src="#" alt="" />
       </div>
     </div>
-
-
 
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="" alt="" />
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button class="card__like-button" aria-label="like button"></button>
-          <button
-            class="card__delete-button"
-            aria-label="delete button"
-          ></button>
+          <button class="card__like-button" type="button"></button>
+          <button class="card__delete-button" type="" button></button>
         </div>
       </li>
     </template>
