--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     <div class="modal" id="card-image">
       <div class="modal__image-container">
         <h2 class="modal__title"></h2>
+        <button class="modal__image-close-button" type="button"></button>
         <img class="modal__card-image-preview" src="#" alt="" />
       </div>
     </div>
