--- a/index.html
+++ b/index.html
@@ -123,14 +123,13 @@
       </div>
     </div>
     <!-- Opening Picture Modal -->
-<div class="modal" id="card-image">
-  <div class="modal__image-container">
-    <h2 class="modal__title"></h2>
-    <button class="modal__image-close-button" type="button"></button>
-    <img class="modal__card-image-preview" src="#" alt="" />
-  </div>
-</div>
-
+    <div class="modal" id="card-image">
+      <div class="modal__image-container">
+        <h2 class="modal__title"></h2>
+        <button class="modal__close" type="button"></button>
+        <img class="modal__card-image-preview" src="#" alt="" />
+      </div>
+    </div>
 
     <template id="card-template">
       <li class="card">
