--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
       name="viewport"
-      content="width=device-width, initial-scale=1.0,
-    user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Around the U.S.</title>
-    <link href="./pages/index.css" rel="stylesheet" />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <title>Arount the U.S</title>
     <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
+
   <body class="page">
     <div class="page__content">
-      <header class="header">
+      <header class="header page__section">
         <img
           src="./images/logo.svg"
-          alt="Around the U.S logo"
-          class="header__image"
+          alt="Around the U.S. Logo"
+          class="header__logo"
         />
       </header>
+
       <main class="content">
-        <section class="profile">
+        <section class="profile page__section">
           <img
             src="./images/jacques-cousteau.jpg"
-            alt="avatar"
+            alt="Avatar"
             class="profile__image"
           />
           <div class="profile__info">
@@ -39,109 +40,120 @@
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
-        <section class="card page__section">
-          <ul class="card__list"></ul>
+        <section class="cards page__section">
+          <ul class="cards__list"></ul>
         </section>
       </main>
-      <footer class="footer">
-        <p class="footer__content">© 2022 Around The U.S.</p>
+      <footer id="footer" class="footer">
+        <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
     </div>
-    <!-- Edit Modal -->
-    <div class="modal" id="edit-modal">
+    <!-----------------Edit modal------------->
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button
-          class="modal__close"
-          id="modal-close-button"
+          class="modal__close-button"
+          id="edit-close-button"
           type="button"
         ></button>
         <h2 class="modal__heading">Edit profile</h2>
-        <form class="modal__form">
-          <label class="modal__label">
-            <input
-              type="text"
-              name="title"
-              class="modal__input modal__input_type_name"
-              id="profile-title"
-              placeholder="Name"
-              minlength="2"
-              maxlength="40"
-              required
-            />
-            <span class="modal__error" id="profile-title-error"></span>
-          </label>
-          <label class="modal__label">
-            <input
-              type="text"
-              name="description"
-              class="modal__input modal__input_type_description"
-              id="profile-description"
-              placeholder="Description"
-              minlength="2"
-              maxlength="200"
-              required
-            />
-            <span class="modal__error" id="profile-description-error"></span>
-          </label>
-          <button type="submit" class="modal__button">Save</button>
+        <form class="modal__form" id="edit-profile-form" novalidate>
+          ><input
+            type="text"
+            name="title"
+            placeholder="Name"
+            class="modal__input modal__input_type_name"
+            id="modal-form-name"
+            minlength="2"
+            maxlength="40"
+            required
+          />
+          <span class="modal__error" id="modal-form-name-error"></span>
+
+          <input
+            type="text"
+            name="description"
+            placeholder="Description"
+            class="modal__input modal__input_type_description"
+            id="modal-form-description"
+            minlength="2"
+            maxlength="200"
+            required
+          />
+          <span class="modal__error" id="modal-form-description-error"></span>
+
+          <button
+            class="button modal__button modal__button_disabled"
+            type="submit"
+            disabled
+          >
+            Save
+          </button>
         </form>
       </div>
     </div>
-
-    <!-- Add Card Modal-->
+    <!-----------------Add card modal---------------->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button class="modal__close" id="button" type="button"></button>
-        <h2 class="modal__heading">New Place</h2>
-        <form class="modal__form" id="add-card-form">
-          <label class="modal__label">
-            <input
-              type="text"
-              name="title"
-              class="modal__input modal__input_type_title"
-              placeholder="Title"
-              id="modal-title-add-card"
-              minlength="1"
-              maxlength="30"
-              required
-            />
-            <span class="modal__error" id="modal-title-add-card-error"></span>
-          </label>
-          <label class="modal__label">
-            <input
-              type="url"
-              name="url"
-              class="modal__input modal__input_type_url"
-              placeholder="Image URL"
-              id="modal-url-add-card"
-              required
-            />
-            <span class="modal__error" id="modal-url-add-card-error"> </span>
-          </label>
-          <button class="modal__button" type="submit">Save</button>
+        <button
+          class="modal__close-button"
+          id="card-close-button"
+          type="button"
+        ></button>
+        <h2 class="modal__heading">New place</h2>
+        <form class="modal__form" id="add-card-form" novalidate>
+          <input
+            class="modal__input modal__input_type_title"
+            id="modal-form-title"
+            name="title"
+            placeholder="Title"
+            type="text"
+            minlength="1"
+            maxlength="30"
+            required
+          />
+          <span class="modal__error" id="modal-form-title-error"></span>
+          <input
+            class="modal__input modal__input_type_link"
+            id="modal-form-url"
+            name="link"
+            placeholder="Link"
+            type="url"
+            required
+          />
+          <span class="modal__error" id="modal-form-url-error"></span>
+          <button
+            class="button modal__button modal__button_disabled"
+            type="submit"
+            disabled
+          >
+            Create
+          </button>
         </form>
       </div>
     </div>
-    <!-- Opening Picture Modal -->
-    <div class="modal" id="card-image">
-      <div class="modal__image-container">
-        <h2 class="modal__title"></h2>
-        <button class="modal__close" type="button"></button>
-        <img class="modal__card-image-preview" src="#" alt="" />
+    <!---Image preview--->
+    <div class="modal" id="preview-image-modal">
+      <div class="modal__preview-container">
+        <button
+          class="modal__close-button modal__close-button_type_preview"
+          id="modal-preview-close-button"
+          type="button"
+        ></button>
+        <img class="modal__image-preview" src="#" alt="" />
+        <p class="modal__image-title"></p>
       </div>
     </div>
-
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="" alt="" />
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
-          <button class="card__delete-button" type="" button></button>
+          <button class="card__delete-button" type="button"></button>
         </div>
       </li>
     </template>
-    <script src="./scripts/validation.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script defer src="./pages/index.js" type="module"></script>
   </body>
 </html>
