--- a/src/index.html
+++ b/src/index.html
@@ -2,153 +2,143 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Travel photo sharing site" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="travel, photo, share, globe" />
-    <meta name="author" content="Trevor Foster" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <title>Around the U.S.</title>
+    <link rel="shortcut icon" href="../favicon.ico" />
   </head>
   <body class="page">
-    <header class="header page__section">
-      <img
-        class="header__logo"
-        src="<%=require('./images/around-logo.svg')%>"
-        alt="Around the U.S. Logo"
-      />
-    </header>
-    <main class="page__section">
-      <section class="profile">
+    <div class="page__content">
+      <header class="header page__section">
         <img
-          class="profile__picture"
-          src="<%=require('./images/jacques-cousteau.jpg')%>"
-          alt="Profile Picture"
+          class="header__image"
+          src="<%=require('./images/logo.svg')%>"
+          alt="around the us logo"
         />
-        <div class="profile__info">
-          <h1 class="profile__info-name">Jacques Cousteau</h1>
+      </header>
+      <main class="content">
+        <section class="profile page__section">
+          <img
+            class="profile__pic"
+            src="<%=require('./images/jacques-cousteau.png')%>"
+            alt="jacques cousteau profile pic"
+          />
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
+            <button
+              aria-label="edit button"
+              class="profile__pencil-button"
+              type="button"
+              id="profile-edit-button"
+            ></button>
+            <p class="profile__description">Explorer</p>
+          </div>
           <button
-            class="profile__edit-button"
-            aria-label="Edit Button"
+            class="profile__add-button"
+            id="add-button"
             type="button"
           ></button>
-          <p class="profile__info-description">Explorer</p>
-        </div>
-        <button
-          class="profile__add-button"
-          aria-label="Add button"
-          type="button"
-        ></button>
-      </section>
-      <section class="content"></section>
-      <footer class="footer">
-        <p class="footer__copyright">© 2022 Around the U.S.</p>
+        </section>
+        <section class="cards page__section">
+          <ul class="cards__list"></ul>
+        </section>
+      </main>
+      <footer class="footer page__section">
+        <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
-    </main>
-    <!-- Edit Profile Modal -->
-    <div class="modal" id="edit_profile_modal">
-      <div class="modal__container">
-        <button type="button" class="modal__exit-button"></button>
-        <h2 class="modal__container-title">Edit profile</h2>
-        <form class="modal__form" name="profile-form" id="profile-form">
-          <fieldset class="modal__form-fieldset">
-            <div class="input-field">
-              <input
-                type="text"
-                class="modal__form-input"
-                id="name"
-                name="name"
-                placeholder="Name"
-                minlength="2"
-                maxlength="40"
-                required
-              />
-              <span class="modal__error-message" id="name-error"></span>
-            </div>
-            <div class="input-field">
-              <input
-                type="text"
-                class="modal__form-input"
-                id="description"
-                name="description"
-                placeholder="Description"
-                minlength="2"
-                maxlength="400"
-                required
-              />
-              <span class="modal__error-message" id="description-error"></span>
-            </div>
-          </fieldset>
-          <button type="submit" class="modal__submit-button">Save</button>
-        </form>
-      </div>
     </div>
-    <!-- Add Image Modal -->
-    <div class="modal" id="add_image_modal">
-      <div class="modal__container">
-        <button type="button" class="modal__exit-button"></button>
-        <h2 class="modal__container-title">New Place</h2>
-        <form class="modal__form" name="add-image-form">
-          <fieldset class="modal__form-fieldset">
-            <div class="input-field">
-              <input
-                type="text"
-                class="modal__form-input modal__input-title"
-                id="title"
-                name="title"
-                placeholder="Title"
-                minlength="2"
-                maxlength="40"
-                required
-              />
-              <span class="modal__error-message" id="title-error"></span>
-            </div>
-            <div class="input-field">
-              <input
-                type="url"
-                class="modal__form-input modal__input-link"
-                id="link"
-                name="link"
-                placeholder="Image Link"
-                required
-              />
-              <span class="modal__error-message" id="link-error"></span>
-            </div>
-          </fieldset>
-          <button type="submit" class="modal__submit-button">Create</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Image Popup Modal -->
-    <div class="modal modal_image" id="image-popup">
-      <div class="modal__image-container">
-        <img src="template_source" class="modal__card-image" alt="" />
+    <!-- edit profile popup -->
+    <section class="popup" id="profile-edit-popup">
+      <div class="popup__container">
         <button
+          class="popup__close-button"
+          id="editprofile-close-button"
           type="button"
-          class="modal__exit-button modal__exit-button_image"
         ></button>
-        <h2 class="modal__image-title">New Place</h2>
+        <h2 class="popup__heading">Edit Profile</h2>
+        <form class="popup__form" id="edit-profile-form" novalidate>
+          <input
+            type="text"
+            class="popup__input popup__input_type_name"
+            placeholder="Name"
+            id="popup-name"
+            maxlength="40"
+            minlength="2"
+            name="name"
+            required
+          />
+          <span class="popup__error" id="popup-name-error"></span>
+          <input
+            type="text"
+            class="popup__input popup__input_type_description"
+            placeholder="About"
+            id="popup-description"
+            name="about"
+            maxlength="200"
+            minlength="2"
+            required
+          />
+          <span class="popup__error" id="popup-description-error"></span>
+          <button class="popup__save-button" type="submit">Save</button>
+        </form>
       </div>
-    </div>
-
-    <!-- Card Template -->
+    </section>
+    <!-- add card popup -->
+    <section class="popup" id="add-card-popup">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          id="addcard-close-button"
+          type="button"
+        ></button>
+        <h2 class="popup__heading">New Place</h2>
+        <form class="popup__form" id="add-card-form" novalidate>
+          <input
+            type="text"
+            class="popup__input popup__input_type_title"
+            placeholder="Title"
+            id="popup-title"
+            name="name"
+            required
+          />
+          <span class="popup__error" id="popup-title-error"></span>
+          <input
+            type="url"
+            class="popup__input popup__input_type_url"
+            placeholder="Image Link"
+            id="popup-image-link"
+            name="link"
+            required
+          />
+          <span class="popup__error" id="popup-image-link-error"></span>
+          <button class="popup__save-button" type="submit">Create</button>
+        </form>
+      </div>
+    </section>
+    <!-- view image popup -->
+    <section class="popup" id="view-image-popup">
+      <div class="popup__container popup__container_type_preview">
+        <button
+          class="popup__close-button"
+          id="viewimage-close-button"
+          type="button"
+        ></button>
+        <img src="#" alt="#" class="popup__image-view" id="popup-image-view" />
+        <p class="popup__image-caption"></p>
+      </div>
+    </section>
+    <!-- card template-->
     <template id="card-template">
-      <article class="content__card">
-        <img src="" class="content__card-image" alt="" />
-        <div class="content__card-items">
-          <p class="content__card-text"></p>
-          <button
-            class="content__card-delete-button"
-            aria-label="delete button"
-            type="button"
-          ></button>
-          <button
-            class="content__card-like-button"
-            aria-label="like button"
-            type="button"
-          ></button>
+      <li class="card">
+        <img class="card__image" src="" alt="" id="card-image" />
+        <button class="card__delete-button" type="button"></button>
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button" type="button"></button>
         </div>
-      </article>
+      </li>
     </template>
+
+    <!-- <script src="./pages/index.js" defer type="module"></script> -->
   </body>
 </html>
