--- a/src/index.html
+++ b/src/index.html
@@ -2,177 +2,254 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Around the US" />
+    <meta
+      name="description"
+      content="Check out these beautiful locations around the world"
+    />
+    <meta name="keywords" content="travel, destinations, locations" />
     <meta name="author" content="Carlos Chavez" />
-    <meta name="keywords" content="us, parks, nationalparks" />
-    <title>Around the U.S</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-  </head>
-  <body class="page">
-    <div class="page__content">
-      <header class="header">
-        <img
-          class="header__image"
-          src="<%=require("./images/logo.svg")%>"
-          alt="Around the U.S. Logo"
-        />
-      </header>
-      <main class="content">
-        <section class="profile page__section">
-          <div class="profile__avatar">
-            <button class="profile__avatar-button" id="avatar-button" type="button"></button>
-            <img
-              class="profile__image"
-              src=""
-              alt="Avatar"
-            />
-            <!-- src="<%=require("./images/jacques-cousteau.png")%>" -->
-          </div>
-          <div class="profile__info">
-            <h1 class="profile__title"></h1>
-            <!-- <h1 class="profile__title">Jacques Cousteau</h1> -->
-            <button class="profile__edit-button" type="button"></button>
-            <p class="profile__description"></p>
-            <!-- <p class="profile__description">Explorer</p> -->
-          </div>
-          <button class="profile__add-button" type="button"></button>
-        </section>
-        <section class="cards page__section">
-          <ul class="cards__list"></ul>
-        </section>
-      </main>
-      <footer class="footer page__section">
-        <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
-      </footer>
-    </div>
+    <title>Around the US</title>
 
-    <!-- EDIT AVATAR IMAGE -->
-    <div class="modal" id="edit-avatar-modal">
-      <div class="modal__container modal__container_avatar">
-        <button class="modal__close-button" type="button" ></button>
-        <form class="modal__form" name="avatar-form" id="avatar-form" novalidate>
-          <p class="modal__heading">Change profile picture</p>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <!-- PROFILE MODAL -->
+
+    <div class="modal" id="editProfile-modal">
+      <div class="modal__container">
+        <button
+          type="button"
+          class="modal__close"
+          aria-label="Close edit profile"
+        ></button>
+        <p class="modal__header">Edit profile</p>
+        <form id="profile-edit-form" class="modal__form">
           <input
-            name="avatar"
-            placeholder="Image Link"
-            id="avatar-link"
-            type="url"
-            class="modal__form-input modal__form-input_type_avatar"
+            class="modal__input modal__input-name"
+            id="profile-name"
+            type="text"
+            placeholder="Name"
+            name="name"
+            minlength="2"
+            maxlength="40"
             required
           />
-          <span class="modal__error" id="avatar-link-error"></span>
-          <button class="modal__button" type="submit" >Save</button>
+          <span class="modal__error" id="profile-name-error"></span>
+
+          <input
+            class="modal__input modal__input-profession"
+            id="profile-profession"
+            type="text"
+            placeholder="Profession"
+            name="profession"
+            minlength="2"
+            maxlength="200"
+            required
+          />
+          <span class="modal__error" id="profile-profession-error"></span>
+
+          <button class="modal__button">Save</button>
         </form>
       </div>
     </div>
 
-    <!-- EDIT PROFILE MODAL -->
-    <div class="modal" id="edit-profile-modal">
+    <!-- DESTINATION MODAL-->
+
+    <div class="modal" id="newCard-modal">
       <div class="modal__container">
-        <button class="modal__close" type="button"></button>
-        <p class="modal__heading">Edit Profile</p>
-        <form name="profile-form" class="modal__form" novalidate>
-          <label class="modal__label">
-            <input
-            class="modal__form-input"
-              type="text"
-              name="name"
-              placeholder="Name"
-              id="profile-title-input"
-              required
-              minlength="2"
-              maxlength="40"
-            />
-            <span class="modal__error" id="profile-title-input-error"></span>
-            </label>
-            <label class="modal__label">
-            <input
-            class="modal__form-input"
-              type="text"
-              name="job"
-              placeholder="Description"
-              id="profile-description-input"
-              required
-              minlength="2"
-              maxlength="200"
-            />
-            <span class="modal__error" id="profile-description-input-error"></span>
-            </label>
-          <button class="modal__button modal__button_disabled" type="submit" disabled>Save</button>
+        <button
+          type="button"
+          class="modal__close"
+          id="newCard-modal-close"
+          aria-label="Close add form"
+        ></button>
+        <p class="modal__header">New place</p>
+        <form id="profile-add-form" class="modal__form">
+          <input
+            class="modal__input modal__input-title"
+            id="destination-name"
+            type="text"
+            name="title"
+            placeholder="Destination name"
+            minlength="1"
+            maxlength="30"
+            required
+          />
+          <span class="modal__error" id="destination-name-error"></span>
+          <input
+            class="modal__input modal__input-image"
+            id="destination-url"
+            type="url"
+            name="link"
+            placeholder="Image link"
+            required
+          />
+          <span class="modal__error" id="destination-url-error"></span>
+          <button type="submit" class="modal__button">Create</button>
         </form>
       </div>
     </div>
 
-    <!-- ADD CARD MODAL -->
-    <div class="modal" id="add-card-modal">
-      <div class="modal__container">
-        <button class="modal__close" type="button"></button>
-        <p class="modal__heading">New place</p>
-        <form name="card-form" class="modal__form">
-          <label class="modal__label">
-						<input
-							class="modal__form-input"
-							type="text"
-							name="name"
-							placeholder="Title"
-							id="card-title-input"
-							required
-							minlength="1"
-							maxlength="30"
-						/>
-						<span class="modal__error" id="card-title-input-error"></span>
-						</label>
-						<label class="modal__label">
-						<input
-							class="modal__form-input"
-							type="url"
-							name="link"
-							placeholder="Image link"
-							id="card-image-input"
-							required
-						/>
-						<span class="modal__error" id="card-image-input-error"></span>
-						</label>
-          <button class="modal__button modal__button_disabled" type="submit" disabled>Create</button>
+    <!-- DISPLAY MODAL -->
+
+    <div class="modal" id="viewImage-modal">
+      <div class="modal__image-container">
+        <button
+          type="button"
+          class="modal__close"
+          id="viewImage-modal-close"
+          aria-label="Close image display"
+        ></button>
+        <img src="#" class="modal__image-display" id="modal-image" alt="" />
+
+        <h3 class="modal__image-title"></h3>
+      </div>
+    </div>
+
+    <!-- CONFIRM DELETE MODAL 430x 181-->
+
+    <div class="modal" id="deleteCard-modal">
+      <div class="modal__container modal__container-confirm">
+        <button
+          type="button"
+          class="modal__close"
+          aria-label="Close edit profile"
+        ></button>
+        <p class="modal__header modal__header-confirm">Are you sure?</p>
+        <form id="deleteCard-button" class="modal__form">
+          <button class="modal__button modal__button-confirm" type="submit">Yes</button>
         </form>
       </div>
     </div>
 
-    <!-- PREVIEW MODAL -->
-    <div class="modal" id="preview-card-modal">
-      <div class="modal__container-preview">
-        <div class="modal__preview">
+    <!-- PROFILE IMAGE MODAL-->
+
+    <div class="modal" id="editAvatar-modal">
+      <div class="modal__container-avatar">
+        <button
+          type="button"
+          class="modal__close"
+          id="editAvatar-modal-close"
+          aria-label="Close add form"
+        ></button>
+        <p class="modal__header">Change profile picture</p>
+        <form id="avatar-update-form" class="modal__form">
+          <input
+            class="modal__input modal__input-imageUrl"
+            id="avatar-url"
+            type="url"
+            name="avatar"
+            placeholder="Image link"
+            required
+          />
+          <span class="modal__error" id="avatar-url-error"></span>
+          <button type="submit" class="modal__button">Create</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- PAGE START -->
+
+    <div class="page">
+      <header class="header">
+        <img
+          src="<%=require('./images/around_logo.svg')%>"
+          alt="Around the U.S."
+          class="header__logo"
+        />
+      </header>
+
+      <main class="main">
+        <section class="profile">
+          <figure class="profile__image-frame">
+            <button
+              type="button"
+              class="profile__image-edit"
+              aria-label="Edit pavatar"
+            >
+              <img
+              
+                src=""
+                class="profile__image"
+                alt="picture of Jacques Cousteau"
+              />
+              
+              <img
+                  src="<%=require('./images/edit_button.svg')%>" class="profile__image-overlay"
+                  alt="edit button, pencil in a square"
+                />
+            </button>
+          </figure>
+
+          <div class="profile__about">
+            <div class="profile__details">
+              <h1 class="profile__name"></h1>
+
+              <button
+                type="button"
+                class="profile__button-edit"
+                aria-label="Edit profile"
+              >
+                <img
+                  src="<%=require('./images/edit_button.svg')%>"
+                  alt="edit button, pencil in a square"
+                />
+              </button>
+            </div>
+
+            <p class="profile__profession"></p>
+          </div>
+
           <button
-            class="modal__close modal__close_preview"
             type="button"
-          ></button>
-          <img src="./images/lago.jpg" alt="#" class="modal__image" />
-          <p class="modal__caption"></p>
-        </div>
-      </div>
-    </div>
+            class="profile__button-add"
+            aria-label="add new destination"
+          >
+            <img
+              src="<%=require('./images/plus_sign.svg')%>"
+              alt="an add button, plus sign"
+            />
+          </button>
+        </section>
 
-    <!-- CONFIRM DELETE MODAL -->
-    <div class="modal" id="delete-modal">
-      <div class="modal__container modal__container_confirm">
-        <button class="modal__close"></button>
-        <form class="modal__form">
-          <p class="modal__heading">Are you sure?</p>
-          <button class="modal__button" type="submit">Yes</button>
-        </form>
-      </div>
+        <section class="destinations"></section>
+      </main>
+
+      <footer class="footer">
+        <p class="footer__copy">&copy; Around the U.S.</p>
+      </footer>
     </div>
+    <!-- Card Template Start-->
 
     <template id="card-template">
-      <li class="card">
-        <img src="#" alt="#" class="card__image" />
-        <button class="card__trashButton" type="button"></button>
-        <div class="card__description">
+      <article class="card">
+        <button
+          type="button"
+          class="card__button-del"
+          aria-label="delete button"
+        >
+          <img
+            src="<%=require('./images/del_button.svg')%>"
+            alt="a trash can"
+          />
+        </button>
+        <button type="button" class="card__image-display" id="image-display">
+          <img src="&nbsp;" class="card__image-card" alt="" />
+        </button>
+        <div class="card__details">
           <h2 class="card__title"></h2>
-          <button class="card__like-button" type="button"></button>
+          <div class="card__button">
+            <button
+              type="button"
+              class="card__button-like"
+              aria-label="like button"
+            ></button>
+            <span class="card__button-count"></span>
+          </div>
         </div>
-      </li>
+      </article>
     </template>
   </body>
 </html>
