--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <!-- EDIT AVATAR IMAGE -->
     <div class="modal" id="edit-avatar-modal">
       <div class="modal__container modal__container_avatar">
-        <button class="modal__close-button" type="button" ></button>
+        <button type="button" class="modal__close" id="editAvatar-modal-close" aria-label="Close add form"></button>
         <form class="modal__form" name="avatar-form" id="avatar-form" novalidate>
           <p class="modal__heading">Change profile picture</p>
           <input
