--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <!-- EDIT AVATAR IMAGE -->
     <div class="modal" id="edit-avatar-modal">
       <div class="modal__container modal__container_avatar">
-        <button class="modal__close" id="avatar-close-button"></button>
+        <button class="modal__close-button" type="button" ></button>
         <form class="modal__form" name="avatar-form" id="avatar-form" novalidate>
           <p class="modal__heading">Change profile picture</p>
           <input
@@ -97,7 +97,7 @@
               minlength="2"
               maxlength="200"
             />
-            <span class="modal__error modal__error_visible" id="avatar-url-error">Please fill out this field.</span>
+            <span class="modal__error" id="profile-description-input-error"></span>
             </label>
           <button class="modal__button modal__button_disabled" type="submit" disabled>Save</button>
         </form>
