--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
         <button class="modal__close" type="button" ></button>
         <form class="modal__form" name="avatar-form" id="avatar-form" novalidate>
           <p class="modal__heading">Change profile picture</p>
+          <label class="modal__label">
           <input
             name="avatar"
             placeholder="Image Link"
@@ -62,6 +63,7 @@
             required
           />
           <span class="modal__error" id="avatar-link-error"></span>
+          </label>
           <button class="modal__button" type="submit" >Save</button>
         </form>
       </div>
